--- a/src/sass/_media.sass
+++ b/src/sass/_media.sass
@@ -232,3 +232,9 @@
     justify-content: flex-start
     &__scroll-down
       padding-top: 2.5rem
+  .control
+    &__policy .invalid
+      text-align: left
+  .footer
+    &__policy .invalid
+      text-align: left
